--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "stripe": "^17.2.0"
   },
   "devDependencies": {
