--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
