--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.453.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
